[gd_scene load_steps=21 format=3 uid="uid://dm6fshn2gwtyr"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_w3v32"]
[ext_resource type="Texture2D" uid="uid://c6vtnsrm3qkg5" path="res://Sprites/main-menu.png" id="1_ylrvo"]
[ext_resource type="FontFile" uid="uid://bj0sypkfjqyly" path="res://Fonts/DTM-Sans.otf" id="2_qc8vm"]
[ext_resource type="FontFile" uid="uid://csahcrsc4eshy" path="res://Fonts/crypt-of-tomorrow-ut-font-no-rus.ttf" id="3_ereoi"]
[ext_resource type="Texture2D" uid="uid://ci3d2sq5742uu" path="res://Gimp/better_smaller_logo.png" id="3_nbjb1"]
[ext_resource type="Texture2D" uid="uid://dnxtn2qy3dr3v" path="res://Gimp/tm.png" id="4_ldm3d"]
[ext_resource type="Texture2D" uid="uid://dkqlgocua53cs" path="res://Sprites/Facebook.png" id="7_ospei"]
[ext_resource type="Script" path="res://Scripts/hyperlinks.gd" id="7_yx5at"]
[ext_resource type="AudioStream" uid="uid://d03bavn88qyfk" path="res://Musics/mus_main_menu.ogg" id="7_yye4o"]
[ext_resource type="Texture2D" uid="uid://dse7jy473vo26" path="res://Sprites/Instagram.png" id="8_1dduo"]
[ext_resource type="Texture2D" uid="uid://doq34v4kstrgg" path="res://Sprites/GitHub.png" id="9_1n5t7"]
[ext_resource type="Texture2D" uid="uid://xcmmahlr0bb" path="res://Sprites/youtube.png" id="10_7rmor"]
[ext_resource type="AudioStream" uid="uid://c7cqtt1g6oox1" path="res://Sounds/snd_rain.ogg" id="13_b2ifl"]

[sub_resource type="Gradient" id="Gradient_dr6hf"]
colors = PackedColorArray(0.498039, 0.498039, 0.498039, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mgct1"]
gradient = SubResource("Gradient_dr6hf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q2qwh"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(700, 1, 1)
direction = Vector3(1, 1, 0)
gravity = Vector3(49, 98, 0)
scale_min = 3.0
scale_max = 4.0
color = Color(1, 1, 1, 0.498039)
color_ramp = SubResource("GradientTexture1D_mgct1")

[sub_resource type="FontVariation" id="FontVariation_gsp6u"]
base_font = ExtResource("3_ereoi")

[sub_resource type="FontVariation" id="FontVariation_340f4"]
base_font = ExtResource("3_ereoi")
spacing_glyph = 1

[sub_resource type="FontVariation" id="FontVariation_whgaq"]
base_font = ExtResource("3_ereoi")
spacing_glyph = 2

[sub_resource type="FontVariation" id="FontVariation_hnbru"]
base_font = ExtResource("3_ereoi")
spacing_space = -5

[node name="Main Manu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_w3v32")

[node name="Reference" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0, 1)
position = Vector2(576, 324)
scale = Vector2(0.843338, 0.84375)
texture = ExtResource("1_ylrvo")

[node name="RainParticles" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(448, 0)
amount = 200
process_material = SubResource("ParticleProcessMaterial_q2qwh")
lifetime = 3.65
preprocess = 2.0
speed_scale = 2.0

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(416, 96)
scale = Vector2(6, 6)
texture = ExtResource("3_nbjb1")

[node name="Trademark" type="Sprite2D" parent="Logo"]
visible = false
position = Vector2(61.543, -4.45964)
scale = Vector2(0.126356, 0.126356)
texture = ExtResource("4_ldm3d")

[node name="Info" type="Node2D" parent="."]

[node name="Name" type="Label" parent="Info"]
offset_left = 128.0
offset_top = 165.0
offset_right = 283.0
offset_bottom = 214.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Benjamin"
vertical_alignment = 1

[node name="Level" type="Label" parent="Info"]
offset_left = 317.0
offset_top = 165.0
offset_right = 401.0
offset_bottom = 214.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "LV 20"
vertical_alignment = 1

[node name="Playtime" type="Label" parent="Info"]
visible = false
offset_left = 549.0
offset_top = 165.0
offset_right = 652.0
offset_bottom = 214.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "999:59"
vertical_alignment = 1

[node name="Location" type="Node2D" parent="."]

[node name="Name" type="Label" parent="Location"]
offset_left = 168.0
offset_top = 214.0
offset_right = 244.0
offset_bottom = 262.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 36
text = "Void"
vertical_alignment = 1

[node name="DecorationSign" type="Label" parent="Location"]
offset_left = 244.0
offset_top = 198.0
offset_right = 295.0
offset_bottom = 246.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 36
text = "_"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Location"]
offset_left = 295.0
offset_top = 214.0
offset_right = 447.0
offset_bottom = 262.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 36
text = "Darkness"
vertical_alignment = 1

[node name="Options" type="Node2D" parent="."]

[node name="Continue" type="Label" parent="Options"]
offset_left = 168.0
offset_top = 281.0
offset_right = 320.0
offset_bottom = 330.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Continue"
vertical_alignment = 1

[node name="Reset" type="Label" parent="Options"]
offset_left = 168.0
offset_top = 335.0
offset_right = 263.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Reset"
vertical_alignment = 1

[node name="Settings" type="Label" parent="Options"]
offset_left = 168.0
offset_top = 389.0
offset_right = 320.0
offset_bottom = 438.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Settings"
vertical_alignment = 1

[node name="SingleAttack" type="Label" parent="Options"]
offset_left = 168.0
offset_top = 443.0
offset_right = 377.0
offset_bottom = 492.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Single Attack"
vertical_alignment = 1

[node name="Leaderboard" type="Label" parent="Options"]
offset_left = 168.0
offset_top = 497.0
offset_right = 244.0
offset_bottom = 546.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Leaderboard"
vertical_alignment = 1

[node name="Credits" type="Label" parent="Options"]
offset_left = 168.0
offset_top = 551.0
offset_right = 301.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Credits"
vertical_alignment = 1

[node name="Credits" type="Node2D" parent="."]

[node name="GameName" type="Label" parent="Credits"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture_filter = 1
offset_left = 315.0
offset_top = 625.0
offset_right = 469.0
offset_bottom = 645.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_gsp6u")
theme_override_font_sizes/font_size = 14
text = "Stop Syurga"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Version" type="Label" parent="Credits"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture_filter = 1
offset_left = 480.0
offset_top = 625.0
offset_right = 534.0
offset_bottom = 645.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_340f4")
theme_override_font_sizes/font_size = 14
text = "v1.0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Copyright" type="Label" parent="Credits"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture_filter = 1
offset_left = 528.0
offset_top = 625.0
offset_right = 601.0
offset_bottom = 645.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_whgaq")
theme_override_font_sizes/font_size = 14
text = " (C) "
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="DeveloperName" type="Label" parent="Credits"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture_filter = 1
offset_left = 595.0
offset_top = 625.0
offset_right = 772.0
offset_bottom = 645.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_hnbru")
theme_override_font_sizes/font_size = 14
text = "Benjamin Thio"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Period" type="Label" parent="Credits"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture_filter = 1
offset_left = 783.0
offset_top = 625.0
offset_right = 839.0
offset_bottom = 645.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ereoi")
theme_override_font_sizes/font_size = 14
text = "2023"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Hyperlinks" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 544.0
offset_right = 2239.0
offset_bottom = 1056.0
scale = Vector2(0.125, 0.125)
theme_override_constants/separation = 255
script = ExtResource("7_yx5at")
metadata/_edit_group_ = true

[node name="ControlledFacebook" type="Control" parent="Hyperlinks"]
visible = false
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="Facebook" type="TextureButton" parent="Hyperlinks/ControlledFacebook"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 512.0
pivot_offset = Vector2(256, 256)
focus_mode = 0
texture_normal = ExtResource("7_ospei")

[node name="ControlledInstagram" type="Control" parent="Hyperlinks"]
visible = false
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="Instagram" type="TextureButton" parent="Hyperlinks/ControlledInstagram"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 512.0
pivot_offset = Vector2(256, 256)
focus_mode = 0
texture_normal = ExtResource("8_1dduo")

[node name="ControlledGitHub" type="Control" parent="Hyperlinks"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="GitHub" type="TextureButton" parent="Hyperlinks/ControlledGitHub"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 512.0
pivot_offset = Vector2(256, 256)
focus_mode = 0
texture_normal = ExtResource("9_1n5t7")

[node name="ControlledYouTube" type="Control" parent="Hyperlinks"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="YouTube" type="TextureButton" parent="Hyperlinks/ControlledYouTube"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 512.0
pivot_offset = Vector2(256, 256)
focus_mode = 0
texture_normal = ExtResource("10_7rmor")

[node name="Quit" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 551.0
offset_right = 244.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_qc8vm")
theme_override_font_sizes/font_size = 37
text = "Quit"
vertical_alignment = 1

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yye4o")
volume_db = 5.0
pitch_scale = 0.95
autoplay = true
bus = &"bgm"

[node name="RainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_b2ifl")
volume_db = -5.0
autoplay = true
bus = &"sfx"

[connection signal="resized" from="Location/Name" to="." method="_on_location_name_label_resized"]
[connection signal="mouse_entered" from="Hyperlinks/ControlledFacebook/Facebook" to="Hyperlinks" method="_on_mouse_entered_facebook"]
[connection signal="mouse_exited" from="Hyperlinks/ControlledFacebook/Facebook" to="Hyperlinks" method="_on_mouse_exited_facebook"]
[connection signal="pressed" from="Hyperlinks/ControlledFacebook/Facebook" to="Hyperlinks" method="_on_facebook_pressed"]
[connection signal="mouse_entered" from="Hyperlinks/ControlledInstagram/Instagram" to="Hyperlinks" method="_on_mouse_entered_instagram"]
[connection signal="mouse_exited" from="Hyperlinks/ControlledInstagram/Instagram" to="Hyperlinks" method="_on_mouse_exited_instagram"]
[connection signal="pressed" from="Hyperlinks/ControlledInstagram/Instagram" to="Hyperlinks" method="_on_instagram_pressed"]
[connection signal="mouse_entered" from="Hyperlinks/ControlledGitHub/GitHub" to="Hyperlinks" method="_on_mouse_entered_git_hub"]
[connection signal="mouse_exited" from="Hyperlinks/ControlledGitHub/GitHub" to="Hyperlinks" method="_on_mouse_exited_git_hub"]
[connection signal="pressed" from="Hyperlinks/ControlledGitHub/GitHub" to="Hyperlinks" method="_on_github_pressed"]
[connection signal="mouse_entered" from="Hyperlinks/ControlledYouTube/YouTube" to="Hyperlinks" method="_on_you_tube_mouse_entered"]
[connection signal="mouse_exited" from="Hyperlinks/ControlledYouTube/YouTube" to="Hyperlinks" method="_on_you_tube_mouse_exited"]
[connection signal="pressed" from="Hyperlinks/ControlledYouTube/YouTube" to="Hyperlinks" method="_on_you_tube_pressed"]
