extends Node

func _on_facebook_pressed():
	OS.shell_open("https://www.facebook.com/benjamin.thio.771")

func _on_instagram_pressed():
	OS.shell_open("https://www.instagram.com/benjamin_thio70")

func _on_github_pressed():
	OS.shell_open("https://github.com/BenjaminThio?tab=repositories")

func _on_you_tube_pressed():
	OS.shell_open("https://www.youtube.com/watch?v=dQw4w9WgXcQ")
